objects/vlocity_ins__DRBatchQueue__c.object
<CustomObject>
    <description>Vlocity system object used as a queue for DataRaptor batches needing to be processed.</description>
    <fields>
        <fullName>vlocity_ins__Action__c</fullName>
        <description>Action performed</description>
        <label>Action</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DRBundleName__c</fullName>
        <label>DataRaptor Bundle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DRStatus__c</fullName>
        <defaultValue>&quot;Ready&quot;</defaultValue>
        <description>Status to process</description>
        <label>DataRaptor Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Vlocity DataRaptor Batch Queue</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <columns>NAME</columns>
        <columns>vlocity_ins__DRStatus__c</columns>
        <columns>vlocity_ins__Action__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>vlocity_ins__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>DataRaptor Batch Queue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity DataRaptor Batch Queue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>